[build-system]
requires = ['setuptools>=48.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
addopts = "--cov=src"
testpaths = [
    "tests",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
plugins = [
  "pydantic.mypy",
]
mypy_path = "src"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
ignore_missing_imports = true
