[metadata]
name = pizza_place_insights
description = REST API for data analysis of a pizza place
author = Ricardo Marcon
license = MIT
license_files = LICENSE
version = attr: pizza_place_insights.__version__
platforms = unix, linux
classifiers =
    Typing :: Typed
    Framework :: FastAPI
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
install_requires =
    fastapi>=0.83
    uvicorn[standard]

python_requires = >=3.10
package_dir =
    =src
packages = find:
zip_safe = no

[options.packages.find]
where=src
